<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:minHeight="40dp"
            android:text="@string/send_file"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/recipientTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bob Smith"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:minHeight="40dp"
            app:layout_constraintTop_toBottomOf="@id/fileTitle"
            app:layout_constraintBottom_toTopOf="@id/fileIcon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/fileIcon"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:cropToPadding="true"
            android:layout_marginLeft="40dp"
            android:scaleType="fitCenter"
            android:src="?android:attr/actionModePasteDrawable"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/fileTitle"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:id="@+id/fileExtensionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="middle"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/fileIcon"
            app:layout_constraintLeft_toLeftOf="@id/fileIcon"
            app:layout_constraintRight_toRightOf="@id/fileIcon"
            tools:text="WICKR" />

        <LinearLayout
            android:id="@+id/fileLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/fileIcon"
            app:layout_constraintLeft_toRightOf="@id/fileIcon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/fileIcon">

            <TextView
                android:id="@+id/fileNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxWidth="200dp"
                android:singleLine="true"
                tools:text="@string/no_file_selected" />
        </LinearLayout>

        <Button
            android:id="@+id/chooseFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_gray"
            android:minHeight="40dp"
            android:text="@string/choose_file"
            android:textColor="#FFFFFF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fileExtensionText" />

        <Button
            android:id="@+id/sendFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/btn_gray"
            android:paddingHorizontal="30dp"
            android:minHeight="40dp"
            android:text="@string/send_file"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/chooseFile"
            app:layout_constraintRight_toRightOf="@id/cancelSend"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/btn_gray"
            android:paddingHorizontal="30dp"
            android:minHeight="40dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/chooseFile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>